spacing issue with projects fixed

--- a/portfolio/src/app/projects/projects.component.css
+++ b/portfolio/src/app/projects/projects.component.css
@@ -34,3 +34,8 @@ h4 {
 .bottomSpace {
     margin-bottom: 150px;
 }
+
+div.row {
+    padding: 0;
+    margin: 0;
+}
